docs(cortex): refine v1.4 roadmap with implementation details
- Add output format specifications for /log /note
- Define conflict resolution rules for digest ↔ tasks.json sync
- Specify AI models for Weekly Intelligence (gpt-4o-mini + text-embedding-3-large)

Addresses implementation clarity feedback

--- a/docs/cortex/v1.4-roadmap.md
+++ b/docs/cortex/v1.4-roadmap.md
@@ -43,7 +43,15 @@
 - 自動タイムスタンプ付与
 - `patch_content` で安全に digest へ追記
 
-**出力先**: `cortex/daily/YYYY-MM-DD-digest.md` の「進捗」セクション
+**出力先**: `cortex/daily/YYYY-MM-DD-digest.md` の `## 進捗` セクション
+
+**出力フォーマット**:
+```markdown
+### 1. タスク名 (HH:MM JST)
+- **カテゴリ**: admin
+- **所要時間**: 12分
+- **メモ**: （オプション）
+```
 
 #### `/note` コマンド
 
@@ -56,9 +64,14 @@
 **機能**:
 - 1行メモを即座に追記
 - タイムスタンプ自動付与
-- digest の "Notes" セクションに追記
+- digest の "Notes" サブセクションに追記
 
-**出力先**: `cortex/daily/YYYY-MM-DD-digest.md` の「振り返り」セクション
+**出力先**: `cortex/daily/YYYY-MM-DD-digest.md` の `## 振り返り > ### 💡 学び` セクション
+
+**出力フォーマット**:
+```markdown
+- **HH:MM JST**: メモ内容
+```
 
 ---
 
@@ -76,6 +89,12 @@
 2. 逆に tasks.json の完了タスクも digest へ反映
 3. 双方向同期でデータの単一真実性を確保
 
+**優先順位ルール** (競合時):
+- **digest が正**: `/log` で明示的に記録されたタスク
+- **tasks.json が正**: 自動生成されたメトリクス（duration, category）
+- **タイムスタンプ比較**: 最新の更新を優先
+- **同時編集検出**: Git conflict として警告、手動マージを促す
+
 **実装方針**:
 ```python
 # scripts/sync-digest-tasks.py
@@ -83,6 +102,21 @@ def sync_digest_to_tasks(digest_path, tasks_json_path):
     # 1. digest から完了タスクを抽出
     # 2. tasks.json に存在しないものを追加
     # 3. タイムスタンプ・カテゴリ・所要時間を同期
+    # 4. 競合検出: digest.timestamp vs tasks.mtime
+    # 5. 最新側を採用、古い側に conflict マーク
+```
+
+**同期方向の決定**:
+```python
+if digest_timestamp > tasks_timestamp:
+    # digest → tasks.json
+    merge_from_digest()
+elif tasks_timestamp > digest_timestamp:
+    # tasks.json → digest
+    merge_from_tasks()
+else:
+    # 同時刻 → digest 優先（人間の記録を尊重）
+    merge_from_digest()
 ```
 
 #### 未完了タスクの自動検出
@@ -146,6 +180,11 @@ def generate_weekly_summary(start_date, end_date):
 - よくできた点 (AI 生成サマリー)
 - 改善できる点 (パターン分析から)
 - 来週の推奨アクション
+
+**AI モデル使用**:
+- **要約生成**: `gpt-4o-mini` (cost-effective, 十分な品質)
+- **埋め込み**: `text-embedding-3-large` (既存 KB と統一)
+- **プロンプト戦略**: Few-shot learning (過去の良い週次サマリーを例示)
 
 #### 長期パターン抽出
 
