test(v1.4): add Phase 1 test suite and polish
Phase 1 Polishing Complete ✅

Tests:
- 7 test cases for log.py and note.py
- All passing (pytest -v)
- Coverage: format, insert, multiple entries

Documentation:
- Added usage examples to v1.4 roadmap
- Recommended categories (admin, core-work, research, meeting)
- Usage timing guidance (3-5 logs/day, 1-3 notes/day)

Aliases:
- .zshrc_cortex_aliases file for easy setup
- log-task / lt shortcuts
- note-task / nt shortcuts

Next: Phase 2 (digest ↔ tasks.json sync)

--- a/cortex/daily/2025-12-06-digest.md
+++ b/cortex/daily/2025-12-06-digest.md
@@ -72,7 +72,7 @@ v1.4 "Predictive Intelligence" に向けた土台を固めていきたい。
 別案件のメモ：
 //決算の計算作業業務と会計事務所と連携をとり税務処理を行うタスクがあり。
 ・12月決算の内容を取り纏め
-・1月に書類を用意し、2月に納税をするため納税金額の確認をお客様調整を行う。
+・1月に書類を用意、2月に納税をするため納税金額の確認。確認後、お客様と調整
 内容としては去年払った税金を戻す作業の為、還付金の返金書類の作成
 ・法定調書の作成
 ・０円納付書の作成業務//
