--- a/docs/cortex/v1.4-roadmap.md
+++ b/docs/cortex/v1.4-roadmap.md
@@ -32,9 +32,30 @@
 
 **目的**: タスク実績を即時 digest に追記
 
+**実装状態**: ✅ 完了 (scripts/log.py)
+
 ```bash
-/log -t "環境変数修正" -d 12m -c admin
+# Basic usage
+python scripts/log.py -t "環境変数修正" -d 12m -c admin
+
+# With memo
+python scripts/log.py -t "バグ修正" -d 1.5h -c core-work -m "CSS issue"
+
+# Recommended alias
+alias log-task='python /path/to/scripts/log.py'
+log-task -t "..." -d 15m -c core-work
 ```
+
+**よく使うカテゴリ**:
+- `admin` - 環境設定、ドキュメント整備
+- `core-work` - 実装、バグ修正
+- `research` - 調査、学習
+- `meeting` - ミーティング、レビュー
+
+**使用タイミング**:
+- タスク完了直後（鮮度が高いうちに記録）
+- まとまった作業の区切り
+- 1日に3-5回程度が目安
 
 **機能**:
 - `-t` (タスク名)
@@ -57,9 +78,23 @@
 
 **目的**: メモ・気づきを軽く記録
 
+**実装状態**: ✅ 完了 (scripts/note.py)
+
 ```bash
-/note "n8n の cron は volume 永続化に注意"
+# Basic usage
+python scripts/note.py "n8n の cron は volume 永続化に注意"
+
+# Recommended alias
+alias note-task='python /path/to/scripts/note.py'
+note-task "コメントと実装の不一致は設計意図の喪失"
 ```
+
+**使用タイミング**:
+- 作業中の気づき・発見
+- エラーの原因分析メモ
+- 設計判断の記録
+- トラブルシューティングの教訓
+- 1日に1-3回程度
 
 **機能**:
 - 1行メモを即座に追記
