docs(digest): record Phase 2 completion notes
- Phase 2 prototype complete (digest → tasks one-way sync)
- Next session: Reverse sync policy design (digest-safe approach)
- Policy: Never modify existing digest blocks, append-only

--- a/cortex/daily/2025-12-08-digest.md
+++ b/cortex/daily/2025-12-08-digest.md
@@ -47,6 +47,8 @@
 
 ### 💡 学び
 
+- **14:05 JST**: Phase 2 逆方向同期は別セッションで。ポリシー：digest を絶対壊さない（新規追加のみ・既存ブロック編集なし）
+
 - **14:03 JST**: v1.4 Phase 1 完全完了 + Phase 2 プロトタイプ完成。記録→同期の流れが自動化された
 
 - **13:31 JST**: v1.4 Phase 1: /log /note コマンドの実装完了。記録が即座に digest に反映される
