docs(v1.4): add Phase 3 incomplete task detection spec
Phase 3 Start: Incomplete Task Detection

Spec Complete:
- Purpose: Auto-detect incomplete tasks at EOD
- Input: task-entry-YYYY-MM-DD.json
- Logic: planned - completed = incomplete
- Output: carryover + completion_rate metadata
- CLI: scripts/detect-incomplete-tasks.py
- Testing: 6 test cases defined

Key Design:
- Simple content.strip() matching (v1.4)
- Append-only to carryover field
- Zero-division safe (0.0 for empty)
- Error handling (SystemExit on JSON error)

Integration:
- Manual: /wrap-up command
- Auto: Nightly Recipe (22:00 JST)

Next: Implementation + TDD tests

--- a/cortex/daily/2025-12-08-digest.md
+++ b/cortex/daily/2025-12-08-digest.md
@@ -53,6 +53,8 @@
 
 ### 💡 学び
 
+- **16:32 JST**: Phase 3 着手: 未完了タスク自動検出の仕様書完成 (docs/cortex/v1.4-incomplete-task-detection.md)
+
 - **14:48 JST**: 🌙 今日の総括: v1.4 Phase 1 完全実装 + Phase 2 プロトタイプ。JDL モデル起動。記録の摩擦がゼロになり、明日から「壊さずに広げる」フェーズへ
 
 **v1.4 Phase 1-2 の実装から**
