--- a/docs/cortex/v1.4-incomplete-task-detection.md
+++ b/docs/cortex/v1.4-incomplete-task-detection.md
@@ -97,10 +97,17 @@ incomplete_titles = planned_titles - completed_titles
 - デフォルト: `tasks` に載っているタスクだけ を判定対象とする。
 - 将来拡張: オプションで `carryover` を「暗黙の計画」とみなし判定対象に含める。
 
+**設計意図（v1.4）**:
+- v1.4 では、「事前に tasks に載せたタスク」だけを完了率算出の対象とし、  
+  `/log` のみで発生する ad-hoc な作業ログは完了率には含めない（将来拡張の余地とする）。
+
 ### 3.4 未完了タスクの抽出
 
+**API 構造（2層）**:
+
 ```python
-def detect_incomplete_tasks(task_entry: dict) -> dict:
+# コアロジック（ファイル I/O なし）
+def detect_incomplete_tasks_from_entry(task_entry: dict) -> dict:
     """
     入力: 単一日の task-entry JSON
     出力:
@@ -116,6 +123,11 @@ def detect_incomplete_tasks(task_entry: dict) -> dict:
       ]
     }
     """
+
+# CLI 用ラッパ（ファイル I/O 担当）
+def detect_incomplete_tasks_for_date(date: str) -> dict:
+    entry = load_task_entry(date)
+    return detect_incomplete_tasks_from_entry(entry)
 ```
 
 - `incomplete_tasks` には、元の `tasks` にあったオブジェクトをそのまま or 必要最小限のフィールドだけコピーする。
@@ -126,7 +138,8 @@ def detect_incomplete_tasks(task_entry: dict) -> dict:
 
 ### 4.1 関数レベルの出力
 
-- `detect_incomplete_tasks(date: str) -> dict`
+- `detect_incomplete_tasks_from_entry(task_entry: dict) -> dict`
+- `detect_incomplete_tasks_for_date(date: str) -> dict`
 - 上記 3.4 の戻り値を返す。
 
 ### 4.2 task-entry への書き戻し
@@ -134,6 +147,8 @@ def detect_incomplete_tasks(task_entry: dict) -> dict:
 以下のルールで `task-entry-YYYY-MM-DD.json` を更新する：
 
 1. `incomplete_tasks` を `task_entry["carryover"]` に保存する（v1.4ではここに格納）
+   - **carryover 更新ポリシー**: v1.4 では常に検出結果で **完全上書き** する（手動編集は想定しない）。
+   - 将来的に手動編集を許容する場合は、マージポリシーを別途定義する。
 2. 翌日の `task-entry-YYYY-MM-DD.json` または `tomorrow_candidates` へ転記するのは 別レイヤー とする
    - 例: `scripts/rollover-tasks.py` or nightly Recipe の責務
 
@@ -168,17 +183,20 @@ task_entry["metadata"]["incomplete_detection"] = {
 
 ### 5.1 異常系（v1.4で最低限対応）
 
+**ログレベル**:
+- ログ出力は `INFO` / `WARN` / `ERROR` のいずれかのレベルをプレフィックスとして付与する。
+
 **壊れた JSON / パースエラー**:
 - `task-entry-YYYY-MM-DD.json` のロードに失敗した場合:
   - 例外を握り潰さず `SystemExit(1)` or 明示的なエラーコードで終了
   - 標準エラー出力にわかりやすいメッセージを出す
-  - `❌ Failed to load task-entry-YYYY-MM-DD.json: JSONDecodeError ...`
+  - `ERROR: Failed to load task-entry-YYYY-MM-DD.json: JSONDecodeError ...`
 
 **必須フィールド欠如**:
 - `tasks` / `completed` が list でない場合:
-  - 安全側に倒して「タスク 0 件」とみなす & WARN ログ出力
+  - 安全側に倒して「タスク 0 件」とみなす & `WARN` ログ出力
 - 各タスクに `content` がない場合:
-  - そのタスクは判定対象から除外し、WARN ログ出力
+  - そのタスクは判定対象から除外し、`WARN` ログ出力
 
 ### 5.2 競合ケース（v1.4では「非対応を明示」）
 
@@ -256,8 +274,8 @@ python scripts/detect-incomplete-tasks.py 2025-12-08
    - → スクリプトが SystemExit or 例外を投げ、プロセスが失敗終了することを確認
 
 6. **空の task-entry**
-   - tasks も completed も空 → incomplete 0件 / rate = NaN or 0.0
-   - 実装上は 0除算を避けて 0.0 扱いにする想定
+   - tasks も completed も空 → incomplete 0件
+   - `completion_rate` は `planned == 0` の場合は `0.0` とする（Undefined ではなく、v1.4 では「計画なし=完了率0」と解釈）
 
 ---
 
