docs(digest): Record tomorrow.json integration completion
Added progress entry:
- tomorrow.json integration into generate-daily-digest.mjs (18m)
- Recipe 13 → Recipe 14 data flow complete
- tomorrow_candidates auto-populate in digest 'High Priority'
- Manual test successful, auto-test tomorrow 20:12 JST

--- a/cortex/daily/2025-12-10-digest.md
+++ b/cortex/daily/2025-12-10-digest.md
@@ -19,19 +19,32 @@
 - **メモ**: 夜間自動化バッチのスケジュール最適化
 - **対象 Recipe**:
   - Recipe 13: Nightly Wrap-up → **20:00 JST**
-  - Recipe 14: Daily Digest Generator → **20:10 JST**
+  - Recipe 14: Daily Digest Generator → **20:10 JST** (→ 20:12 に微調整)
   - Recipe 02: KB Index Rebuild → **20:30 JST**
   - Recipe 10: TODO.md Auto-sync → **20:40 JST**
 - **曜日制限**: 日・月・水・金・土のみ（**火・木除外** = 夜勤シフト考慮）
 - **Cron 式**: 各 Recipe で個別設定
   - Recipe 13: `0 20 * * 0,1,3,5,6`
-  - Recipe 14: `10 20 * * 0,1,3,5,6`
+  - Recipe 14: `12 20 * * 0,1,3,5,6`
   - Recipe 02: `30 20 * * 0,1,3,5,6`
   - Recipe 10: `40 20 * * 0,1,3,5,6`
 - **効果**: 
   - 夜勤日（火・木）の自動実行を停止 → 睡眠時間確保
   - 10分間隔で順次実行 → 依存関係を考慮した設計
   - tomorrow.json → digest.md → KB rebuild → TODO sync の流れが確立
+
+### 💡 tomorrow.json 統合完了 (20:46-21:04 JST)
+- **カテゴリ**: core-work
+- **所要時間**: 18m
+- **メモ**: Recipe 13 → Recipe 14 のデータフロー完成
+- **修正内容**:
+  - `cortex/scripts/generate-daily-digest.mjs` に tomorrow.json 読み込み処理を追加
+  - tomorrow_candidates を digest の「優先度：高」に自動配置
+  - carryover_tasks が翌日に自動引き継がれる仕組み完成
+- **テスト結果**:
+  - 手動実行で tomorrow.json の 3候補が正しく埋め込まれることを確認
+  - 2025-12-11-digest.md が tomorrow.json ベースで生成
+- **次回検証**: 明日 20:12 JST の自動実行
 
 ## 振り返り
 
